Fixed alignment for navbar and social links. Removed php form.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,6 +482,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .social-links {
   padding-top: 20px;
+  padding-left: 20px;
   padding-bottom: 20px;
   text-align: center;
 }
@@ -624,6 +625,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-menu > li {
   margin-left: 10px;
+  /* padding-right: 10px; */
 }
 
 .nav-menu > li > a:before {
